--- a/age.html
+++ b/age.html
@@ -10,13 +10,12 @@
     <div class="container">
         <h1>Age Calculator</h1>
         <div class="form">
-            <label for="birthday">Enter you date of birth</label>
+            <label for="birthday">Enter your date of birth</label>
             <input type="date" id="birthday" name="birthday">
             <button id="btn">Calculate Age</button>
             <p id="result">What is your age?</p>
         </div>
     </div>
-    
     <script src="index.js"></script>
     
 </body>
